# gravitydb

./: .gitignore  Cargo.toml  README.adoc  backends2_filestore.adoc  build  deploy  gravity.adoc  shell.nix  update_queries.adoc  watch
crates/backend_filestore/: Cargo.toml
crates/backend_filestore/src/: cli_helpers.rs  lib.rs
crates/backend_filestore/tests/: test_example_cocktails.rs  test_kv_store.rs
crates/gravity/: Cargo.toml
crates/gravity/src/: kv_graph_store.rs  lib.rs  mem_kv_store.rs  ql.rs  schema.rs
crates/gravity/tests/: test_example_cocktails.rs  test_kv_store.rs  test_zoe_queries.rs
crates/gravitydb/: Cargo.toml
crates/gravitydb-test-utils/: Cargo.toml
crates/gravitydb-test-utils/src/: lib.rs
crates/gravitydb/src/: kv_graph_store.rs  lib.rs  lua.rs  mem_kv_store.rs  ql.rs  schema.rs
crates/gravitydb/src/import/: graphml.rs
crates/gravitydb/tests/: test_example_cocktails.rs  test_import_graphml.rs  test_kv_store.rs  test_zoe_queries.rs
crates/gravitydb_derive/: Cargo.toml
crates/gravitydb_derive/src/: lib.rs
crates/gravitydb_derive/tests/: 01-parse-simple.rs  02-parse-inner-structs.rs  03-schema_type_not_recursive.rs  04-additional-schema-types.rs  05-customize-schema-types.rs  run_tests.rs  tutorial_designing_a_schema.rs
docs/: README.adoc  backends_filestore.adoc  gravity.adoc  key_value_store.adoc  query_language.adoc  schema.adoc
docs/tutorials/: designing_a_schema.adoc
nix/: rust.nix  sources.json
scripts/: check_file_changes.ts
