[package]
name = "gravitydb-filestore"
version = "0.1.0"
description = "A filestore backend for the gravity database"
authors = ["Benjamin Kober <benko@kober-systems.com>"]
edition = "2021"
license = "MIT"

[dependencies]
gravitydb = { version = "0.1.0", path = "../gravitydb", features = ["lua"] }
thiserror = "1.0"
sha2 = "0.10.0"
uuid = { version = "1.10", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
# maybe we use a more compact serialisation format later for production
serde_json = "1.0"

mlua = { version = "0.9", features = ["luau", "serialize"] }
structopt = "0.3"
log = "0.4.8"
simple_logger = "1.6.0"
anyhow = "1.0"

