[package]
name = "gravity"
version = "0.1.0"
authors = ["Benjamin Kober <benko@kober-systems.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.1"

sha2 = "0.9.5" # TODO nur bei Standardimplementierung
uuid = { version = "0.8", features = ["serde", "v4"] }
thiserror = "1.0"
mlua = { version = "0.8", features = ["luau", "serialize"] }

