[package]
name = "gravitydb"
version = "0.1.0"
description = "A graph database"
authors = ["Benjamin Kober <benko@kober-systems.com>"]
homepage = "https://github.com/kober-systems/gravitydb"
edition = "2018"
license = "MIT"
keywords = [
    "database",
    "embedded-database",
    "graph",
]
categories = ["database-implementations"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.1"

sha2 = "0.9.5"
uuid = { version = "1.10", features = ["serde", "v4"] }
thiserror = "1.0"
mlua = { version = "0.9", features = ["luau", "serialize", "macros"], optional = true }
rustyline = { version = "14", features = ["derive"], optional = true }

[features]
lua = ["mlua", "rustyline" ]
js = [ "uuid/js"]

[dev-dependencies]
pretty_assertions = "1"
