[package]
name = "gravitydb"
version = "0.3.1"
description = "A graph database"
authors = ["Benjamin Kober <benko@kober-systems.com>"]
homepage = "https://github.com/kober-systems/gravitydb"
edition = "2021"
license = "MIT"
keywords = [
    "database",
    "embedded-database",
    "graph",
]
categories = ["database-implementations"]

[dependencies]
gravitydb_derive = { version = "0.3", optional = true, path = "../gravitydb_derive" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.2"

sha2 = "0.10.0"
uuid = { version = "1.10", features = ["serde", "v4"] }
thiserror = "2.0"
mlua = { version = "0.11", features = ["luau", "serialize", "macros"], optional = true }
rustyline = { version = "17", features = ["derive"], optional = true }

[features]
lua = ["mlua", "rustyline" ]
js = [ "uuid/js"]
derive = ["gravitydb_derive" ]

[dev-dependencies]
pretty_assertions = "1"
gravitydb-test-utils = { path = "../gravitydb-test-utils" }
