[package]
name = "gravitydb_derive"
version = "0.1.0"
autotests = false
edition = "2021"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/run_tests.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
gravitydb = { path = "../gravitydb" }

pretty_assertions = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9.5"

[dependencies]
proc-macro2 = "1"
syn = "2"
quote = "1"

